--- a/src/main/resources/egovframework/egovProps/globals.properties
+++ b/src/main/resources/egovframework/egovProps/globals.properties
@@ -78,6 +78,8 @@ Globals.oepnapi.WorkApikey = WNID58DX1BWHK1MCI6XL02VR1HM
 #\uba54\uc77c \ubc1c\uc1a1 \ub3c4\uba54\uc778,port #
 Globals.SendMail.domain = mail2.kocca.kr
 Globals.SendMail.port = 9110
+#Globals.SendMail.domain = 210.96.133.67
+#Globals.SendMail.port = 25
 
 #\uc0ac\uc774\ud2b8 \ub3c4\uba54\uc778#
 Globals.edu.domain = edu.kocca.dev.kr
